pkg/ast/mygo_parser.go
// Code generated from MyGo.g4 by ANTLR 4.13.1. DO NOT EDIT.

package ast // MyGo
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MyGoParser struct {
	*antlr.BaseParser
}

var MyGoParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func mygoParserInit() {
	staticData := &MyGoParserStaticData
	staticData.LiteralNames = []string{
		"", "';'", "'{'", "','", "'}'", "'=>'", "'('", "')'", "'='", "'.'",
		"'defer'", "'<'", "'>'", "':'", "'+'", "'|'", "'['", "']'", "'..'",
		"'*'", "'!'", "'&'", "'++'", "'--'", "'!is'", "'/'", "'-'", "'=='",
		"'!='", "'>='", "'<='", "'&&'", "'||'", "'?'", "'package'", "'import'",
		"'struct'", "'enum'", "'fn'", "'trait'", "'bind'", "'combs'", "'ban'",
		"'flip'", "'repeat'", "'where'", "'if'", "'else'", "'match'", "'is'",
		"'other'", "'for'", "'while'", "'loop'", "'break'", "'continue'", "'return'",
		"'let'", "'const'", "'spawn'", "'select'", "'pub'", "'pri'", "'pkg'",
		"'to'", "'this'", "'nil'", "'?!'", "'?!!'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"PACKAGE", "IMPORT", "STRUCT", "ENUM", "FN", "TRAIT", "BIND", "COMBS",
		"BAN", "FLIP", "REPEAT", "WHERE", "IF", "ELSE", "MATCH", "IS", "OTHER",
		"FOR", "WHILE", "LOOP", "BREAK", "CONTINUE", "RETURN", "LET", "CONST",
		"SPAWN", "SELECT", "PUB", "PRI", "PKG", "TO", "THIS", "NIL", "TRY_UNWRAP",
		"PANIC_UNWRAP", "ID", "INT", "FLOAT", "STRING", "LINE_COMMENT", "BLOCK_COMMENT",
		"WS",
	}
	staticData.RuleNames = []string{
		"program", "packageDecl", "importStmt", "statement", "spawnStmt", "selectStmt",
		"selectBranch", "selectRead", "selectWrite", "selectOther", "deferStmt",
		"assignmentStmt", "modifier", "typeParams", "typeParam", "typeArgs",
		"whereClause", "genericConstraint", "structDecl", "structField", "enumDecl",
		"enumVariant", "fnDecl", "paramList", "param", "traitDecl", "traitFnDecl",
		"bindTarget", "traitBodyItem", "banDirective", "returnStmt", "block",
		"ifStmt", "matchStmt", "matchCase", "whileStmt", "loopStmt", "forStmt",
		"forInit", "breakStmt", "continueStmt", "varDecl", "typeList", "typeType",
		"qualifiedName", "exprStmt", "exprList", "expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MyGoParserInit initializes any static state used to implement MyGoParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMyGoParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MyGoParserInit() {
	staticData := &MyGoParserStaticData
	staticData.once.Do(mygoParserInit)
}

// NewMyGoParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMyGoParser(input antlr.TokenStream) *MyGoParser {
	MyGoParserInit()
	this := new(MyGoParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MyGoParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MyGo.g4"

	return this
}

// MyGoParser tokens.
const (
	MyGoParserEOF           = antlr.TokenEOF
	MyGoParserT__0          = 1
	MyGoParserT__1          = 2
	MyGoParserT__2          = 3
	MyGoParserT__3          = 4
	MyGoParserT__4          = 5
	MyGoParserT__5          = 6
	MyGoParserT__6          = 7
	MyGoParserT__7          = 8
	MyGoParserT__8          = 9
	MyGoParserT__9          = 10
	MyGoParserT__10         = 11
	MyGoParserT__11         = 12
	MyGoParserT__12         = 13
	MyGoParserT__13         = 14
	MyGoParserT__14         = 15
	MyGoParserT__15         = 16
	MyGoParserT__16         = 17
	MyGoParserT__17         = 18
	MyGoParserT__18         = 19
	MyGoParserT__19         = 20
	MyGoParserT__20         = 21
	MyGoParserT__21         = 22
	MyGoParserT__22         = 23
	MyGoParserT__23         = 24
	MyGoParserT__24         = 25
	MyGoParserT__25         = 26
	MyGoParserT__26         = 27
	MyGoParserT__27         = 28
	MyGoParserT__28         = 29
	MyGoParserT__29         = 30
	MyGoParserT__30         = 31
	MyGoParserT__31         = 32
	MyGoParserT__32         = 33
	MyGoParserPACKAGE       = 34
	MyGoParserIMPORT        = 35
	MyGoParserSTRUCT        = 36
	MyGoParserENUM          = 37
	MyGoParserFN            = 38
	MyGoParserTRAIT         = 39
	MyGoParserBIND          = 40
	MyGoParserCOMBS         = 41
	MyGoParserBAN           = 42
	MyGoParserFLIP          = 43
	MyGoParserREPEAT        = 44
	MyGoParserWHERE         = 45
	MyGoParserIF            = 46
	MyGoParserELSE          = 47
	MyGoParserMATCH         = 48
	MyGoParserIS            = 49
	MyGoParserOTHER         = 50
	MyGoParserFOR           = 51
	MyGoParserWHILE         = 52
	MyGoParserLOOP          = 53
	MyGoParserBREAK         = 54
	MyGoParserCONTINUE      = 55
	MyGoParserRETURN        = 56
	MyGoParserLET           = 57
	MyGoParserCONST         = 58
	MyGoParserSPAWN         = 59
	MyGoParserSELECT        = 60
	MyGoParserPUB           = 61
	MyGoParserPRI           = 62
	MyGoParserPKG           = 63
	MyGoParserTO            = 64
	MyGoParserTHIS          = 65
	MyGoParserNIL           = 66
	MyGoParserTRY_UNWRAP    = 67
	MyGoParserPANIC_UNWRAP  = 68
	MyGoParserID            = 69
	MyGoParserINT           = 70
	MyGoParserFLOAT         = 71
	MyGoParserSTRING        = 72
	MyGoParserLINE_COMMENT  = 73
	MyGoParserBLOCK_COMMENT = 74
	MyGoParserWS            = 75
)

// MyGoParser rules.
const (
	MyGoParserRULE_program           = 0
	MyGoParserRULE_packageDecl       = 1
	MyGoParserRULE_importStmt        = 2
	MyGoParserRULE_statement         = 3
	MyGoParserRULE_spawnStmt         = 4
	MyGoParserRULE_selectStmt        = 5
	MyGoParserRULE_selectBranch      = 6
	MyGoParserRULE_selectRead        = 7
	MyGoParserRULE_selectWrite       = 8
	MyGoParserRULE_selectOther       = 9
	MyGoParserRULE_deferStmt         = 10
	MyGoParserRULE_assignmentStmt    = 11
	MyGoParserRULE_modifier          = 12
	MyGoParserRULE_typeParams        = 13
	MyGoParserRULE_typeParam         = 14
	MyGoParserRULE_typeArgs          = 15
	MyGoParserRULE_whereClause       = 16
	MyGoParserRULE_genericConstraint = 17
	MyGoParserRULE_structDecl        = 18
	MyGoParserRULE_structField       = 19
	MyGoParserRULE_enumDecl          = 20
	MyGoParserRULE_enumVariant       = 21
	MyGoParserRULE_fnDecl            = 22
	MyGoParserRULE_paramList         = 23
	MyGoParserRULE_param             = 24
	MyGoParserRULE_traitDecl         = 25
	MyGoParserRULE_traitFnDecl       = 26
	MyGoParserRULE_bindTarget        = 27
	MyGoParserRULE_traitBodyItem     = 28
	MyGoParserRULE_banDirective      = 29
	MyGoParserRULE_returnStmt        = 30
	MyGoParserRULE_block             = 31
	MyGoParserRULE_ifStmt            = 32
	MyGoParserRULE_matchStmt         = 33
	MyGoParserRULE_matchCase         = 34
	MyGoParserRULE_whileStmt         = 35
	MyGoParserRULE_loopStmt          = 36
	MyGoParserRULE_forStmt           = 37
	MyGoParserRULE_forInit           = 38
	MyGoParserRULE_breakStmt         = 39
	MyGoParserRULE_continueStmt      = 40
	MyGoParserRULE_varDecl           = 41
	MyGoParserRULE_typeList          = 42
	MyGoParserRULE_typeType          = 43
	MyGoParserRULE_qualifiedName     = 44
	MyGoParserRULE_exprStmt          = 45
	MyGoParserRULE_exprList          = 46
	MyGoParserRULE_expr              = 47
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	PackageDecl() IPackageDeclContext
	AllImportStmt() []IImportStmtContext
	ImportStmt(i int) IImportStmtContext
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGoParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(MyGoParserEOF, 0)
}

func (s *ProgramContext) PackageDecl() IPackageDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageDeclContext)
}

func (s *ProgramContext) AllImportStmt() []IImportStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportStmtContext); ok {
			len++
		}
	}

	tst := make([]IImportStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportStmtContext); ok {
			tst[i] = t.(IImportStmtContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) ImportStmt(i int) IImportStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStmtContext)
}

func (s *ProgramContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MyGoVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MyGoParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MyGoParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MyGoParserPACKAGE {
		{
			p.SetState(96)
			p.PackageDecl()
		}

	}
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == MyGoParserIMPORT {
		{
			p.SetState(99)
			p.ImportStmt()
		}

		p.SetState(104)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-1863740924820416) != 0) || ((int64((_la-65)) & ^0x3f) == 0 && ((int64(1)<<(_la-65))&243) != 0) {
		{
			p.SetState(105)
			p.Statement()
		}

		p.SetState(108)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(110)
		p.Match(MyGoParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPackageDeclContext is an interface to support dynamic dispatch.
type IPackageDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PACKAGE() antlr.TerminalNode
	ID() antlr.TerminalNode

	// IsPackageDeclContext differentiates from other interfaces.
	IsPackageDeclContext()
}

type PackageDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageDeclContext() *PackageDeclContext {
	var p = new(PackageDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_packageDecl
	return p
}

func InitEmptyPackageDeclContext(p *PackageDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_packageDecl
}

func (*PackageDeclContext) IsPackageDeclContext() {}

func NewPackageDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageDeclContext {
	var p = new(PackageDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGoParserRULE_packageDecl

	return p
}

func (s *PackageDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageDeclContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(MyGoParserPACKAGE, 0)
}

func (s *PackageDeclContext) ID() antlr.TerminalNode {
	return s.GetToken(MyGoParserID, 0)
}

func (s *PackageDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.EnterPackageDecl(s)
	}
}

func (s *PackageDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.ExitPackageDecl(s)
	}
}

func (s *PackageDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MyGoVisitor:
		return t.VisitPackageDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MyGoParser) PackageDecl() (localctx IPackageDeclContext) {
	localctx = NewPackageDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MyGoParserRULE_packageDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(112)
		p.Match(MyGoParserPACKAGE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(113)
		p.Match(MyGoParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(115)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MyGoParserT__0 {
		{
			p.SetState(114)
			p.Match(MyGoParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStmtContext is an interface to support dynamic dispatch.
type IImportStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORT() antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsImportStmtContext differentiates from other interfaces.
	IsImportStmtContext()
}

type ImportStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStmtContext() *ImportStmtContext {
	var p = new(ImportStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_importStmt
	return p
}

func InitEmptyImportStmtContext(p *ImportStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_importStmt
}

func (*ImportStmtContext) IsImportStmtContext() {}

func NewImportStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStmtContext {
	var p = new(ImportStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGoParserRULE_importStmt

	return p
}

func (s *ImportStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStmtContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(MyGoParserIMPORT, 0)
}

func (s *ImportStmtContext) STRING() antlr.TerminalNode {
	return s.GetToken(MyGoParserSTRING, 0)
}

func (s *ImportStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.EnterImportStmt(s)
	}
}

func (s *ImportStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MyGoListener); ok {
		listenerT.ExitImportStmt(s)
	}
}

func (s *ImportStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MyGoVisitor:
		return t.VisitImportStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MyGoParser) ImportStmt() (localctx IImportStmtContext) {
	localctx = NewImportStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MyGoParserRULE_importStmt)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(117)
		p.Match(MyGoParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(118)
		p.Match(MyGoParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(119)
		p.Match(MyGoParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VarDecl() IVarDeclContext
	AssignmentStmt() IAssignmentStmtContext
	ExprStmt() IExprStmtContext
	IfStmt() IIfStmtContext
	MatchStmt() IMatchStmtContext
	WhileStmt() IWhileStmtContext
	LoopStmt() ILoopStmtContext
	ForStmt() IForStmtContext
	BreakStmt() IBreakStmtContext
	ContinueStmt() IContinueStmtContext
	StructDecl() IStructDeclContext
	EnumDecl() IEnumDeclContext
	FnDecl() IFnDeclContext
	TraitDecl() ITraitDeclContext
	ReturnStmt() IReturnStmtContext
	DeferStmt() IDeferStmtContext
	SpawnStmt() ISpawnStmtContext
	SelectStmt() ISelectStmtContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MyGoParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MyGoParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }
